--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fluent Foundation</title>
+    <title>Machine settings</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- Fluent UI Web Components -->
-    <script type="module" src="https://unpkg.com/@fluentui/web-components@2.5.15/dist/web-components.min.js"></script>
+    <!-- Fluent 2 web components polyfill -->
+    <script src="https://unpkg.com/@fluentui/web-components"></script>
 </head>
 <body>
     <div id="root"></div>
