--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Machine settings</title>
-    <link rel="stylesheet" href="/cloud-settings-machines/styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <!-- Fluent 2 web components polyfill -->
     <script src="https://unpkg.com/@fluentui/web-components"></script>
 </head>
 <body>
     <div id="root"></div>
-    <script type="module" src="/cloud-settings-machines/src/main.jsx"></script>
+    <script type="module" src="./src/main.jsx"></script>
 </body>
 </html>
