--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Machine settings</title>
     <link rel="stylesheet" href="./styles.css">
-    <!-- Fluent 2 web components polyfill -->
-    <script src="https://unpkg.com/@fluentui/web-components"></script>
+    <!-- Fluent 2 web components -->
+    <script type="module" src="https://unpkg.com/@fluentui/web-components@2.5.16/dist/web-components.min.js"></script>
 </head>
 <body>
     <div id="root"></div>
